--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,14 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.squareup.sqldelight'
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.franklinharper.inactivitymonitor"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,16 +25,34 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Google libraries (alphabetical order)
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
+    // 3rd party libraries (alphabetical order)
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    implementation "com.squareup.sqldelight:android-driver:1.1.3"
+    implementation "com.squareup.sqldelight:rxjava2-extensions:1.1.3"
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
+    // Testing libraries
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
