--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,29 +32,40 @@ android {
 dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    // Google libraries (alphabetical order)
+    // ==============================================================
+    // Google libraries sorted by product name in alphabetical order
+    //
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.core:core:1.0.2"
     implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
 
-    // 3rd party libraries (alphabetical order)
+    // ==============================================================
+    // 3rd party libraries sorted by product name in alphabetical order
 
+    // OkHttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
+    // SqlDelight
     implementation "com.squareup.sqldelight:android-driver:1.1.3"
     implementation "com.squareup.sqldelight:rxjava2-extensions:1.1.3"
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
+    // ==============================================================
     // Testing libraries
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
