--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,33 +3,35 @@
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.franklinharper.inactivitymonitor">
 
-    <dist:module dist:instant="true"/>
+  <dist:module dist:instant="true"/>
 
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+  <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+  <uses-permission android:name="android.permission.VIBRATE"/>
 
-    <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+  <application
+      android:name=".MyApplication"
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme">
+    <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
 
-        <receiver android:name=".ActivityTransitionReceiver">
-            <intent-filter>
-                <action android:name="com.franklinharper.inactivitymonitor.TRANSITION_RECOGNITION" />
-            </intent-filter>
-        </receiver>
+    <receiver android:name=".ActivityTransitionReceiver">
+      <intent-filter>
+        <action android:name="com.franklinharper.inactivitymonitor.TRANSITION_RECOGNITION"/>
+      </intent-filter>
+    </receiver>
 
-    </application>
+  </application>
 
 </manifest>
