--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.squareup.sqldelight'
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -70,5 +75,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testImplementation "io.mockk:mockk:1.9.3"
 }
 
