--- a/inactivity_monitory_google_cloud_sql/build.gradle
+++ b/inactivity_monitory_google_cloud_sql/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.ktor_version = '0.9.4'
     ext.appengine_version = '1.9.60'
     ext.appengine_plugin_version = '1.3.4'
+    ext.gce_logback_version = '0.60.0-alpha'
 
     repositories {
         jcenter()
@@ -31,6 +32,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-servlet:$ktor_version"
     compile "io.ktor:ktor-html-builder:$ktor_version"
+    compile "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
 
     providedCompile "com.google.appengine:appengine:$appengine_version"
 }
