Test writing data to Cloud Firestore DB (no security!)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
 
+    // Firebase SDKs
+    implementation 'com.google.firebase:firebase-analytics:17.0.1'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
+//    implementation 'com.google.firebase:firebase-auth:18.1.0'
+//    implementation 'com.google.firebase:firebase-firestore:20.2.0'
+    // See maven.google.com for the latest versions
+    implementation 'com.google.firebase:firebase-firestore-ktx:20.2.0'
+
     // ==============================================================
     // 3rd party libraries sorted by product name in alphabetical order
 
@@ -83,4 +92,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.2.0'
     testImplementation "io.mockk:mockk:1.9.3"
 }
+
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
 
