--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         mavenCentral()
         // JCenter and Bintray are not trustworthy artifact hosts.
-        // Ideally we fetch nothing from them!
-        // jcenter()
+        // Ideally we would fetch nothing from them!
+        //
         // For more details see: https://blog.autsoft.hu/a-confusing-dependency/
+        //
+        // But after upgrading to com.android.tools.build:gradle:3.5.0
+        // The build failed with: "Could not find org.jetbrains.trove4j:trove4j:20160824",
+        // and the only way I found to fix the build was to re-enable jcenter() :(
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.squareup.sqldelight:gradle-plugin:1.1.3'
-        classpath 'com.google.gms:google-services:4.3.0'  // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
