--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
     defaultConfig {
         applicationId "com.franklinharper.inactivitymonitor"
         minSdkVersion 26
-        targetSdkVersion 29
+        // TODO Figure out a way for ActivityTransitionReceiver to receive broadcasts when
+        //  targetSdkVersion is set to 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
