--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,20 +51,22 @@ dependencies {
     // ==============================================================
     // Google libraries sorted by product name in alphabetical order
     //
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.core:core:1.0.2"
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "androidx.core:core:1.1.0"
+    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+
 
     // Firebase SDKs
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:20.2.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.3.1'
 
     // ==============================================================
     // 3rd party libraries sorted by product name in alphabetical order
