--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,12 @@
 
   <dist:module dist:instant="true"/>
 
+  <!-- ACTIVITY_RECOGNITION permissions changed for API 29 and above -->
+  <!--  New permission for API >= 29 -->
+  <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+  <!--  Old permission for API <= 28 -->
   <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
