--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.core:core:1.1.0"
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation "androidx.preference:preference:1.1.0"
+    implementation "androidx.preference:preference-ktx:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
