--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
     </activity>
 
     <activity
-        android:name=".SettingsActivity"
+        android:name=".settings.SettingsActivity"
         android:label="@string/action_settings" />
 
     <receiver android:name="com.franklinharper.inactivitymonitor.BootReceiver">
