--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
-    buildToolsVersion = '29.0.0'
+    buildToolsVersion = '29.0.3'
 
     kotlinOptions {
         jvmTarget = '1.8'
@@ -53,32 +53,33 @@ dependencies {
     //
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.core:core:1.1.0"
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.preference:preference:1.1.0"
-    implementation "androidx.preference:preference-ktx:1.1.0"
+    implementation "androidx.core:core:1.2.0"
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.preference:preference:1.1.1"
+    implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 
     // Firebase SDKs
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.3.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
     // ==============================================================
     // 3rd party libraries sorted by product name in alphabetical order
 
     // OkHttp
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
 
 
@@ -96,11 +97,10 @@ dependencies {
 
     // ==============================================================
     // Testing libraries
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testImplementation "io.mockk:mockk:1.9.3"
 }
 
