--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.versions = [
+        'kotlin': '1.3.72',
+        'hilt': '2.28-alpha'
+    ]
+
     repositories {
         google()
         mavenCentral()
@@ -16,10 +20,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.squareup.sqldelight:gradle-plugin:1.1.3'
         classpath 'com.google.gms:google-services:4.3.3'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
