--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,11 @@ repositories {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.franklinharper.inactivitymonitor"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 2
         versionName "0.4.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,6 +40,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -56,8 +59,8 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     // Dependency Injection
@@ -65,11 +68,11 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:${versions.hilt}"
 
     // Firebase SDKs
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
-    implementation 'com.google.firebase:firebase-auth-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.2'
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:22.1.0'
 
     // ==============================================================
     // 3rd party libraries sorted by product name in alphabetical order
@@ -105,4 +108,3 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
-
