--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
 
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <!--  Used to prevent alerting the user while a call is active -->
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
   <application
       android:name=".App"
