--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext.versions = [
-        'kotlin': '1.4.21',
-        'hilt': '2.30.1-alpha'
+        'kotlin': '1.5.30',
+        'hilt': '2.38.1'
     ]
 
     repositories {
@@ -23,7 +23,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.squareup.sqldelight:gradle-plugin:1.1.3'
-        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
