--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "com.google.truth:truth:1.1.3"
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
